app/settings/account/settings.module.css
.main {
    display: flex;
    flex-direction: column;
    color: white;
    width: 100%;
    overflow: hidden;
    min-height: 100vh;
    align-items: center;
    background-color: #030a18;
    height: 100%;
}

.tab {
    display: flex;
    width: 100%;
    /* height: 30px; */
    align-items: center;
    justify-content: left;
    padding-left: 20px;
}

.tabNameDiv {
    display: flex;
    gap: 10px;
    padding: 10px;
}

.mainContent {
    padding: 30px;
    width: 70%;
    border-radius: 10px;
    background-color: #11141c;
    position: relative;
}

.photosSection {
    position: relative;
    width: 100%;
    margin-bottom: 120px;
}

.banner {
    width: 100%;
    height: 300px;
    border-radius: 10px;
}

.banner img {
    object-fit: cover;
}

.pfp {
    position: absolute;
    border-radius: 50%;
    bottom: 0;
    left: 5%;
    /* border: 7px solid #11141c; */
    transform: translateY(50%);
    height: 170px;
    width: 170px;
}

.detailsHolder {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.detailCard input,
.detailCard textarea {
    background-color: rgb(35, 35, 35);
    color: white;
    border-radius: 5px;
}

.detailCard textarea {
    padding: 5px 10px;
}

.detailCard {
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.actionBtns {
    display: flex;
    margin-top: 20px;
    gap: 20px;
    justify-content: right;
}

.actionBtns button {
    height: 35px;
    transition: all 0.2s;
}

.resetBtn {
    background-color: white;
    color: red;
}

.resetBtn:hover {
    background-color: rgb(219, 219, 219);
}

.saveBtn {
    background-color: black;
    color: white;
}

.saveBtn:hover {
    background-color: rgb(20, 20, 20);
}


.cropModal{
    display: flex;
    flex-direction: column;
    position: absolute;
    z-index: 5;
    background-color: #191830c2;
    backdrop-filter: blur(15px);
    padding: 20px;
    height: 550px;
    width: 600px;
    top: 50%;
    left: 50%; 
    transform: translateX(-50%) translateY(-50%);
    border-radius: 20px;
    justify-content: space-between;
    gap: 10px;
}

.cropImageDiv{
    display: flex;
    align-items: center;
    justify-content: center;
    flex: 1;
}
.cropImageDiv img{
    object-fit: contain;
    height: 450px;
    width: 100%;
}


.cropImage::backdrop{
    background-color: black;
    opacity: 1;
}
.cropBtnSection{
    display: flex;
    position: relative;
    justify-content: space-between;
    width: 70%;
    margin: auto;
}
.cropButton, .cancelBtn{
    background-color: black;
    columns: white;
    width:120px;
    margin: auto;
    padding: 10px 15px;
    border-radius: 10px;    
}
.cancelBtn{
    background-color: white;
    color: red;
}


@media (max-width: 520px) {
    .main {
        background-color: #11141c;
    }

    .mainContent {
        width: 100%;
        padding: 10px;
        min-height: 100%;
    }

    .pfp {
        height: 40vw;
        width: 40vw;
    }

    .banner {
        height: 150px;
    }
    .detailsHolder{
        padding: 0px 10px;
    }
    .cropModal{
        height: 500px;
        width: 95vw;
        padding:10px;
    }
    .cropImageDiv img{
        height: 350px;
    }
    .cropBtnSection{
        width: 100%;
    }
}

